Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0 Beta 1
-
Windows 7, 64bit vs2010
-
2ccd34fd20b72a1cd4125d67dd206d4f968a1b5d
Description
If multiple QAxWidgets are added as subwindows of an QMdiArea, only the first one added will render its contents to the screen. The rest will display a black rectangle and will cause rendering artifacts when moved.
Attachments
Issue Links
- is required for
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-
For Gerrit Dashboard: QTBUG-26791 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
32455,1 | Use native handles for parent change check in QWindowsWindow. | master | qt/qtbase | Status: MERGED | +2 | 0 |